syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/DIMO-Network/vehicle-signal-decoding/pkg/grpc";

package grpc;

message DeviceSettings {
  int64 id = 1;
  string template_name = 2;
  double battery_critical_level_voltage = 3;
  double safety_cut_out_voltage = 4;
  double sleep_timer_event_driven_interval = 5;
  double sleep_timer_event_driven_period = 6;
  double sleep_timer_inactivity_after_sleep_interval = 7;
  double sleep_timer_inactivity_fallback_interval = 8;
  double wake_trigger_voltage_level = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;

}
message DeviceSettingsSummary {
  int64 id = 1;
  string template_name = 2;

}
message GetDeviceSettingListRequest {
  optional string template_name = 1;

}
message GetDeviceSettingListResponse {
  repeated DeviceSettingsSummary device_settings = 1;

}
message GetDeviceSettingByIDRequest {
  int64 id = 1;

}
message GetDeviceSettingByIDResponse {
  DeviceSettings device_settings = 1;

}
message UpdateDeviceSettingsRequest {
  DeviceSettings device_settings = 1;

}

service DeviceSettingsService {
  rpc CreateDeviceSettings (UpdateDeviceSettingsRequest) returns (google.protobuf.Empty);
  rpc UpdateDeviceSettings (UpdateDeviceSettingsRequest) returns (google.protobuf.Empty);
  rpc GetDeviceSettingList (GetDeviceSettingListRequest) returns (GetDeviceSettingListResponse);
  rpc GetDeviceSettingByID (GetDeviceSettingByIDRequest) returns (GetDeviceSettingByIDResponse);
}
